# athena-language-server

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/athena-language-server/: Cargo.toml
crates/athena-language-server/src/: config.rs  from_proto.rs  global_state.rs  handlers.rs  lib.rs  line_index.rs  main.rs  main_loop.rs  semantic_tokens.rs  to_proto.rs
crates/base-db/: Cargo.toml
crates/base-db/src/: change.rs  fixture.rs  input.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/ide/: Cargo.toml
crates/ide/src/: fixture.rs  go_to_definition.rs  helpers.rs  lib.rs  navigation_target.rs  syntax_highlighting.rs
crates/ide/src/syntax_highlighting/: highlights.rs  tags.rs
crates/parser/: Cargo.toml
crates/parser/src/: bridge.rs  event.rs  grammar.rs  input.rs  lexer.rs  lib.rs  output.rs  parser.rs  syntax_kind.rs  tests.rs  token_set.rs
crates/parser/src/grammar/: deductions.rs  directives.rs  expressions.rs  patterns.rs  phrases.rs  sorts.rs  statements.rs
crates/parser/src/lexer/: generated.rs
crates/parser/src/snapshots/: parser__tests__err_test.snap  parser__tests__err_test@0001_simple_lambda_expr_error.ath.snap  parser__tests__err_test@0003_term_var_no_sort.ath.snap  parser__tests__err_test@0005_check_arm_no_result.ath.snap  parser__tests__err_test@0007_check_expr_no_result_first_arm.ath.snap  parser__tests__err_test@0012_make_vector_expr_no_phrase.ath.snap  parser__tests__err_test@0021_while_expr_no_phrase.ath.snap  parser__tests__err_test@0022_try_expr_no_arm.ath.snap  parser__tests__err_test@0023_try_arm_no_expr.ath.snap  parser__tests__err_test@0024_let_expr_no_part.ath.snap  parser__tests__err_test@0025_let_part_no_expr.ath.snap  parser__tests__err_test@0026_let_part_no_pat.ath.snap  parser__tests__err_test@0027_let_rec_part_no_pat.ath.snap  parser__tests__err_test@0028_let_rec_part_no_expr.ath.snap  parser__tests__err_test@0029_let_rec_expr_no_binding.ath.snap  parser__tests__err_test@0030_match_expr_no_scrutinee.ath.snap  parser__tests__err_test@0033_match_arm_no_expr.ath.snap  parser__tests__err_test@0034_var_pat_no_sort.ath.snap  parser__tests__err_test@0035_var_pat_no_ident.ath.snap  parser__tests__err_test@0037_named_as_pat_no_pat.ath.snap  parser__tests__err_test@0038_val_of_pat_no_pat.ath.snap  parser__tests__err_test@0039_two_pat_pat_no_second_pat_2.ath.snap  parser__tests__err_test@0040_two_pat_pat_no_second_pat.ath.snap  parser__tests__err_test@0041_two_pat_pat_no_pat_2.ath.snap  parser__tests__err_test@0042_two_pat_pat_no_pat.ath.snap  parser__tests__err_test@0043_list_pat_no_end.ath.snap  parser__tests__err_test@0047_assume_no_assumption.ath.snap  parser__tests__err_test@0051_assume_part_no_ident.ath.snap  parser__tests__err_test@0051_check_arm_no_ded.ath.snap  parser__tests__err_test@0053_let_rec_ded_no_body.ath.snap  parser__tests__err_test@0054_let_ded_no_body.ath.snap  parser__tests__err_test@0056_let_rec_expr_no_body.ath.snap  parser__tests__err_test@0058_try_ded_no_ded.ath.snap  parser__tests__err_test@0059_try_ded_no_arm.ath.snap  parser__tests__err_test@0064_pick_any_no_sory.ath.snap  parser__tests__err_test@0065_pick_any_no_ident.ath.snap  parser__tests__err_test@0066_generalize_over_no_body.ath.snap  parser__tests__err_test@0067_with_witness_no_body.ath.snap  parser__tests__err_test@0069_with_witness_no_phrase.ath.snap  parser__tests__err_test@0072_pick_witnesses_no_witness.ath.snap  (+465 more)
crates/parser/src/syntax_kind/: generated.rs
crates/parser/src/tests/: sourcegen_inline_tests.rs
crates/parser/test_data/lexer/ok/: domain_with_person.ath  factorial.ath  var_with_sort.ast  var_with_sort.ath
crates/parser/test_data/parser/inline/err/ded/: 0046_method_call_no_method.ath  0049_assume_part_no_phrase.ath  0050_named_assume_no_body.ath  0051_assume_part_no_ident.ath  0051_check_arm_no_ded.ath  0052_check_ded_no_arms.ath  0053_let_rec_ded_no_body.ath  0057_let_rec_ded_no_binding.ath  0058_try_ded_no_ded.ath  0059_try_ded_no_arm.ath  0060_proof_by_contra_no_phrase.ath  0061_proof_by_contra_no_body.ath  0062_generalize_over_no_expr.ath  0063_pick_any_no_body.ath  0064_pick_any_no_sory.ath  0065_pick_any_no_ident.ath  0066_generalize_over_no_body.ath  0067_with_witness_no_body.ath  0068_with_witness_no_witness.ath  0069_with_witness_no_phrase.ath  0070_pick_witness_no_body.ath  0071_pick_witness_no_witness.ath  0072_pick_witnesses_no_witness.ath  0073_pick_witnesses_no_body.ath  0074_induct_no_phrase.ath  0075_induct_empty.ath  0076_restricted_named_pat_no_ident.ath  0077_cases_no_phrase.ath  0078_cases_empty.ath  0096_conclude_no_phrase.ath  0100_conclude_no_ident.ath  0117_pick_witnesses_no_phrase.ath  0124_cases_with_on_no_term.ath  0127_infer_by_no_phrase.ath  0128_infer_by_no_expr.ath  0129_infer_by_multiple_no_phrase.ath  0130_infer_from_multiple_no_phrase.ath  0131_infer_by_no_on.ath  0132_infer_from_no_phrase.ath  0133_named_inference_err_lookahead.ath  (+23 more)
crates/parser/test_data/parser/inline/err/dir/: 0079_module_no_rbrace.ath  0081_define_empty.ath  0082_define_no_name.ath  0085_define_proc_no_name.ath  0086_define_proc_empty.ath  0087_define_proc_no_rparen.ath  0090_declare_no_name.ath  0091_declare_no_second_name.ath  0092_declare_no_ret_sort.ath  0093_declare_no_sorts.ath  0094_sort_vars_no_name.ath  (+34 more)
crates/parser/test_data/parser/ok/file/: baddefine.ath  by-ded.ath  complex-declare.ath  declare-complex-return-sort.ath  hardmatch.ath  match-prefix-regression.ath  wtf.ath
crates/syntax/: Cargo.toml  ast.ron  athena.ungram
crates/syntax/src/: ast.rs  lib.rs  parsing.rs  ptr.rs  syntax_error.rs  syntax_kind.rs  syntax_node.rs  tests.rs  validation.rs
crates/syntax/src/ast/: node_ext.rs  traits.rs
crates/syntax/src/snapshots/: syntax__tests__syntax_validation.snap
crates/syntax/src/syntax_kind/: generated.rs
crates/syntax/src/tests/: ast_src.rs  sourcegen_ast.rs
crates/syntax/test_data/validation/: by-ded-expr-start.ath
xtask/: Cargo.toml
xtask/src/: codegen.rs  install.rs  main.rs
xtask/src/codegen/: ast.rs
xtask/src/codegen/ast/: ast_src.rs
(+284 files in other folders)
