[workspace]
members = ["crates/*", "xtask"]

[profile.dev.package.insta]
opt-level = 3

[workspace.dependencies]
syntax = { path = "crates/syntax" }
base-db = { path = "crates/base-db" }
parser = { path = "crates/parser" }
ide = { path = "crates/ide" }
ide-db = { path = "crates/ide-db" }
util = { path = "crates/util" }
hir = { path = "crates/hir" }
paths = { git = "https://github.com/rust-lang/rust-analyzer", rev = "d712e529405b0ef5719c81ae620c88a97db78d93" }
test-utils = { path = "crates/test-utils" }
insta = { version = "1.28.0", features = ["glob"] }
drop_bomb = "0.1.5"

la-arena = "0.3"
rustc-hash = "1.1.0"
tracing = "0.1.37"

itertools = "0.10.5"
dashmap = "5.4.0"
