[package]
name = "athena-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = [
	"macros",
	"io-std",
	"rt",
	"rt-multi-thread",
] }
tower-lsp = "0.19.0"
