[package]
name = "athena-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
env_logger = "0.10.0"
log = "0.4.17"
ropey = "1.6.0"
syntax.workspace = true
tokio = { version = "1.26.0", features = [
	"macros",
	"io-std",
	"rt",
	"rt-multi-thread",
] }
tower-lsp = "0.19.0"
