[package]
name = "athena-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
syntax.workspace = true
tokio = { version = "1.26.0", features = [
	"macros",
	"io-std",
	"rt",
	"rt-multi-thread",
] }
tower-lsp = "0.19.0"
ide.workspace = true
ide-db.workspace = true
vfs.workspace = true
parking_lot = "0.12.1"
extend = "1.2.0"
rustc-hash.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = "1.0.70"
tracing.workspace = true
tracing-tree = "0.2.2"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
