[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
glob = "0.3.1"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
syntax = { version = "0.1.0", path = "../syntax" }
xshell = "0.2.3"
