[package]
name = "ide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ide-db.workspace = true
syntax.workspace = true
hir.workspace = true
tracing.workspace = true

[dev-dependencies]
test-utils.workspace = true
itertools.workspace = true
