[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
logos = "0.12.1"
static_assertions = "1.1.0"
util.workspace = true

[features]
nightly = ["static_assertions/nightly"]

[dev-dependencies]
insta = { version = "1.28.0", features = ["glob"] }
sourcegen = { path = "../sourcegen" }
