[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb.workspace = true
logos = "0.12.1"
static_assertions = "1.1.0"

[features]
nightly = ["static_assertions/nightly"]

[dev-dependencies]
insta.workspace = true
sourcegen = { path = "../sourcegen" }
