[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
rowan = "0.15.10"
smol_str = "0.1.24"
parser = { path = "../parser" }
util = { version = "0.1.0", path = "../util" }

[dev-dependencies]
itertools = "0.10.5"
insta = { version = "1.28.0", features = ["glob"] }
